--- a/jwebppy/src/main/resources/static/portal/css/layout/iv/hq/parts/basic.css
+++ b/jwebppy/src/main/resources/static/portal/css/layout/iv/hq/parts/basic.css
@@ -232,6 +232,21 @@ a.link:hover {text-decoration: underline; color: #00a779; cursor: pointer;}
     vertical-align : middle;
 }
 
+.period span.label {
+	padding: 5px 0px 5px 0px;
+	box-sizing: border-box;
+	display: inline-block;
+	position: relative;
+	width: 50px;	
+}
+
+.period select.hours {
+	width: 50px;
+}
+
+.period select.minutes {
+	width: 50px;
+}
 
 /*--- 조건 영역 ------------------*/
 .condition-area {
@@ -842,6 +857,7 @@ input.custom-ui[type="radio"]:checked + label:before {
 .tooltip {
   position: relative;
   display: inline-block;
+  z-index: 999999;
   /*border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
 }
 
