--- a/jwebppy/src/main/resources/templates/platform/mgmt/authority/list.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/authority/list.html
@@ -293,11 +293,11 @@ $(document).ready(function() {
 								
 								if (dataKeyName == "uSeq")
 								{
-									showUser(dataKey);	
+									_showUserdataKey);	
 								}
 								else
 								{
-									showUserGroup(dataKey);
+									_showUserGroupdataKey);
 								};
 							});
 						};
