--- a/jwebppy/src/main/resources/templates/platform/mgmt/user/list.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/user/list.html
@@ -168,7 +168,7 @@ $(document).ready(function() {
 				}
 				else if (columnIndex == 7)
 				{
-					showUserGroup(key);
+					_showUserGroupkey);
 				};
 			},
 			editColumns: function(trIndex, tr, tdIndex, td, text)
