--- a/jwebppy/src/main/resources/templates/platform/mgmt/user/user_group/list.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/user/user_group/list.html
@@ -58,11 +58,11 @@ $(document).ready(function() {
 				
 				if (columnIndex == 1)
 				{
-					showUserGroup(key);
+					_showUserGroupkey);
 				}
 				else if (columnIndex == 8)
 				{
-					showCredentialsPolicy(key);
+					_showCredentialsPolicy(key);
 				}
 			}
 	};
