--- a/jwebppy/src/main/resources/templates/portal/iv/mgmt/account/list.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/mgmt/account/list.html
@@ -22,9 +22,17 @@
 		<tbody>
 			<tr>
 				<th style="width:200px">[[#{HQP_L_USERNAME}]]</th>
-				<td><input type="text" id="pUsername" name="pUsername" class="custom-ui uppercase"/></td>
+				<td>
+					<div class="input-area">
+						<input type="text" id="pUsername" name="pUsername" class="custom-ui uppercase"/>
+					</div>
+				</td>
 				<th style="width:200px">[[#{HQP_L_DEALER_CODE}]]</th>
-				<td><input type="text" id="pDealerCode" name="pDealerCode" class="custom-ui"/></td>				
+				<td>
+					<div class="input-area">
+						<input type="text" id="pDealerCode" name="pDealerCode" class="custom-ui"/>
+					</div>
+				</td>				
 			</tr>		
 		</tbody>
 	</table>
