--- a/jwebppy/src/main/resources/templates/platform/common/authentication/change_password.html
+++ b/jwebppy/src/main/resources/templates/platform/common/authentication/change_password.html
@@ -86,7 +86,7 @@ function checkForm()
 	return true;
 };
 
-function doSubmit()
+function submit()
 {
 	if (checkForm())
 	{
@@ -144,17 +144,17 @@ $(document).ready(function() {
 		document.location.href = INDEX_URL;
 	});	
 	
-	$(".btn-login").on("click", function() {
+	$(".submit").on("click", function() {
 		if (checkForm())
 		{
-			doSubmit();
+			submit();
 		};	
 	});
 	
 	$("input[type=password]").on("keydown", function(event) {
 		if (event.keyCode==13)
 		{
-			doSubmit();
+			submit();
 		};
 	});
 	
@@ -172,7 +172,7 @@ function showLoginBox()
 <form id="FORM_password" method="post" autocomplete="off" onsubmit="return false;">
 <div id="wrap" class="wrap">
 	<div style="text-align: center">
-		<img id="IMG_main" th:src="@{/platform/img/login/main2.jpg}" alt="Main Image" />
+		<img id="IMG_main" th:src="@{/platform/img/login/main4.jpg}" alt="Main Image" />
 	</div> 
 	<div class="body">
 		<div class="login-box" style="display:none;">
@@ -180,7 +180,7 @@ function showLoginBox()
 			<div class="password"><img th:src="@{/platform/img/login/password.png}" class="login-input" th:alt="#{PLTF_L_CURRENT_PASSWORD}" /><input type="password" id="password" name="password" th:placeholder="#{PLTF_L_CURRENT_PASSWORD}" /></div>
 			<div class="password"><img th:src="@{/platform/img/login/password.png}" class="login-input" th:alt="#{PLTF_L_NEW_PASSWORD}" /><input type="password" id="newPassword" name="newPassword" th:placeholder="#{PLTF_L_NEW_PASSWORD}" /></div>
 			<div class="password"><img th:src="@{/platform/img/login/password.png}" class="login-input" th:alt="#{PLTF_L_CONFIRM_PASSWORD}" /><input type="password" id="confirmPassword" name="confirmPassword" th:placeholder="#{PLTF_L_CONFIRM_PASSWORD}" /></div>
-			<button class="btn-login" type="button" th:text="#{PLTF_B_SUBMIT}"></button>
+			<button class="btn-login submit" type="button" th:text="#{PLTF_B_SUBMIT}"></button>
 		</div>
 	</div>
 	<div class="bottom" style="height: 60px; opacity: 0.75;">
