--- a/jwebppy/src/main/resources/static/portal/css/layout/iv/login.css
+++ b/jwebppy/src/main/resources/static/portal/css/layout/iv/login.css
@@ -45,7 +45,7 @@ body .body { margin:0 auto; margin: 17px 40px 0px 40px}
 		top:165px;
 	}
 	body .body .login-box .title {
-		width: 211px;
+		width: 100%;
 		height: 45px;
 		font-size: 30px;
 		font-weight: bold;
