--- a/jwebppy/src/main/resources/templates/platform/common/authentication/change_password.html
+++ b/jwebppy/src/main/resources/templates/platform/common/authentication/change_password.html
@@ -15,15 +15,15 @@
 <link rel="stylesheet" type="text/css" th:href="@{/platform/css/login/login.css}" />
 <link rel="stylesheet" type="text/css" class="ui" th:href="@{/platform/css/semantic/semantic.min.css}" />
 
-<script th:src="@{/platform/js/jquery/jquery.min.js}"></script>
-<script th:src="@{/platform/js/jquery/jquery.cookie.js}"></script>
-<script th:src="@{/platform/js/jquery/jquery-ui.min.js}"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-throttle-debounce/1.1/jquery.ba-throttle-debounce.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fomantic-ui/2.8.8/semantic.min.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script th:src="@{/platform/js/jWebppy.utils.object.js}"></script>
 <script th:src="@{/platform/js/jWebppy.utils.path.js}"></script>
 <script th:src="@{/platform/js/jWebppy.utils.string.js}"></script>
 <script th:src="@{/platform/js/jWebppy.utils.ajax.js}"></script>
 <script th:src="@{/platform/js/jWebppy.ui.dimmer.js}"></script>
-<script th:src="@{/platform/js/semantic/semantic.min.js}"></script>
 <script>
 let INDEX_URL = "[[${T(org.jwebppy.platform.core.PlatformConfigVo).INDEX_URL}]]";
 
@@ -155,6 +155,7 @@ $(document).ready(function() {
 		if (event.keyCode==13)
 		{
 			submit();
+			return false;
 		};
 	});
 	
