--- a/jwebppy/src/main/resources/templates/portal/common/authentication/change_password.html
+++ b/jwebppy/src/main/resources/templates/portal/common/authentication/change_password.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-4.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE html>
+<html
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<head>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta http-equiv="Pragma" content="no-cache" />
 <meta http-equiv="Expires" content="-1" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+<meta id="_csrf" name="_csrf" th:content="${_csrf.token}" />
+<meta id="_csrf_header" name="_csrf_header" th:content="${_csrf.headerName}" />
 <title th:text="#{PTL_T_APP_NAME}"></title>
 
 <link rel="stylesheet" type="text/css" th:href="@{/portal/css/layout/iv/login.css}" />
@@ -14,9 +19,10 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-throttle-debounce/1.1/jquery.ba-throttle-debounce.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fomantic-ui/2.8.8/semantic.min.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<script th:src="@{/portal/js/jquery/jquery.cookie.js}"></script>
 <script th:src="@{/portal/js/jWebppy.utils.object.js}"></script>
+<script th:src="@{/portal/js/jWebppy.utils.path.js}"></script>
 <script th:src="@{/portal/js/jWebppy.utils.string.js}"></script>
+<script th:src="@{/portal/js/jWebppy.utils.ajax.js}"></script>
 <script th:src="@{/portal/js/jWebppy.ui.dimmer.js}"></script>
 
 <script>
@@ -64,7 +70,7 @@ function checkForm()
 	if (JpUtilsString.isEmpty($("#password").val()))
 	{
 		JpUiDimmer.alert("[[#{PLTF_M_LOGIN_EMPTY_PWD}]]", function() {
-			$("#password").focus();	
+			$("#password").focus();
 		});
 					
 		return false;				
@@ -135,7 +141,7 @@ function submit()
 						}
 						else
 						{
-							JpUiDimmer.hide();	
+							JpUiDimmer.hide();
 						};	
 					});					
 				};
@@ -169,8 +175,9 @@ $(document).ready(function() {
 		if (event.keyCode==13)
 		{
 			submit();
+			return false;
 		};
-	});		
+	});	
 });
 </script>
 </head>
@@ -187,7 +194,7 @@ $(document).ready(function() {
 		<div><img id="mainImg" th:src="@{/portal/img/login/main.png}" alt="Main Image" /></div>
 		<div class="login-box">
 			<div class="title" th:text="#{PTL_T_CHANGE_PASSWORD}"></div>
-			<div class="password"><img th:src="@{/portal/img/login/password.png}" class="login-input" th:alt="#{PLTF_L_CURRENT_PASSWORD}" /><input type="password" id="password" name="password" th:placeholder="#{PLTF_L_CURRENT_PASSWORD}" /></div>
+			<div class="password"><img th:src="@{/portal/img/login/password.png}" class="login-input" th:alt="#{PLTF_L_CURRENT_PASSWORD}" /><input type="password" id="password" name="password" th:placeholder="#{PLTF_L_CURRENT_PASSWORD}" autofocus="autofocus"/></div>
 			<div class="password"><img th:src="@{/portal/img/login/password.png}" class="login-input" th:alt="#{PLTF_L_NEW_PASSWORD}" /><input type="password" id="newPassword" name="newPassword" th:placeholder="#{PLTF_L_NEW_PASSWORD}" /></div>
 			<div class="password"><img th:src="@{/portal/img/login/password.png}" class="login-input" th:alt="#{PLTF_L_CONFIRM_PASSWORD}" /><input type="password" id="confirmPassword" name="confirmPassword" th:placeholder="#{PLTF_L_CONFIRM_PASSWORD}" /></div>
 			<button class="btn-login submit" type="button" th:text="#{PLTF_B_SUBMIT}"></button>
